rough draft ver1.0

--- a/state_unity/Assembly-CSharp.csproj
+++ b/state_unity/Assembly-CSharp.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\Oculus\VR\Scripts\Util\OVRScreenFade.cs" />
     <Compile Include="Assets\Oculus\VR\Scripts\Util\OVRTrackedRemote.cs" />
     <Compile Include="Assets\Oculus\VR\Scripts\Util\OVRWaitCursor.cs" />
+    <Compile Include="Assets\Scripts\EatDetect.cs" />
     <Compile Include="Assets\Scripts\GrabScript.cs" />
     <Compile Include="Assets\Scripts\Granny_Behavior.cs" />
     <Compile Include="Assets\Scripts\Interactable.cs" />
@@ -149,6 +150,7 @@
     <None Include="Assets\Oculus\VR\Resources\OVRMRCameraFrameLit.shader" />
     <None Include="Assets\Oculus\VR\Resources\Underlay Transparent Occluder.shader" />
     <None Include="Assets\Oculus\VR\Resources\Texture2D Blit.shader" />
+    <None Include="Assets\SimpleFX\Materials\UnlitVertexColour_Alpha.shader" />
     <None Include="Assets\Shaders\Skybox Shaders\Horizon With Sun Skybox.shader" />
     <None Include="Assets\Oculus\VR\Resources\OVRMRCameraFrame.shader" />
     <None Include="Assets\Oculus\VR\Resources\OVRMRClipPlane.shader" />
