--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.ssets.resS filter=lfs diff=lfs merge=lfs -text
 *.unity filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
+*.assets.resS filter=lfs diff=lfs merge=lfs -text
